tests/snapshots/snapshot_fixtures__stdlib__math__lround.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/math/lround.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[14] = "%ld %lld %ld\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn lround(%arg0: double) -> s64i [external, c, nothrow];
fn llround(%arg0: double) -> s64i [external, c, nothrow];
fn lrint(%arg0: double) -> s64i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "x", align 8
    %2 = alloca double, "y", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 2.500000e+00 : double
    store %4, %1, align 8, volatile
    %5 = const -2.500000e+00 : double
    store %5, %2, align 8, volatile
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[14]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = get_global @lround : ((double) -> s64i)*
    %10 = load %1 : double, align 8, volatile
    %11 = call @lround(%10) : s64i [all]
    %12 = get_global @llround : ((double) -> s64i)*
    %13 = load %2 : double, align 8, volatile
    %14 = call @llround(%13) : s64i [all]
    %15 = get_global @lrint : ((double) -> s64i)*
    %16 = load %1 : double, align 8, volatile
    %17 = call @lrint(%16) : s64i [all]
    %18 = call @printf(%8, %11, %14, %17) : s32i [all]
    %19 = const 0 : s32i
    store %19, %0
    %20 = load %0 : s32i
    return %20
}
